Refactored the UI of the grid
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43738

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
@@ -40,26 +40,30 @@
     }
 
     .rate-plan-grid vr-select[smallselect] .dropdown-menu {
-        width: 70px !important;
+        width: 150px !important;
         min-width: unset !important;
     }
 
     .rate-plan-grid vr-select[smallselect] .inner-addon {
-        width: 60px !important;
+        width: 145px !important;
         padding: 4px 3px !important;
     }
 
     .rate-plan-grid vr-select[smallselect] .vr-select-multiple {
-        width: 60px !important;
+        width: 145px !important;
     }
 
     .rate-plan-grid vr-select[smallselect] .vr-select-height {
         overflow: hidden !important;
     }
 
-    .rate-plan-grid vr-select[smallselect] .mark-select > div {
+    .rate-plan-grid vr-select[smallselect] .mark-select > div:first-child {
+        width: 120px !important;
+    }
+    .rate-plan-grid vr-select[smallselect] .mark-select > div:nth-child(2) {
         width: 15px !important;
     }
+   
 
     .rate-plan-grid .vr-dash:before {
         content: "—";
