--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Preview/Templates/SaleZoneRoutingProductPreviewGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Preview/Templates/SaleZoneRoutingProductPreviewGridTemplate.html
@@ -6,5 +6,5 @@
     <vr-datagridcolumn headertext="'Zone'" field="'Entity.ZoneName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Current Routing Product'" field="'Entity.CurrentSaleZoneRoutingProductName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'New Routing Product'" field="'Entity.NewSaleZoneRoutingProductName'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Effective On'" field="'Entity.EffectiveOn'" type="'Date'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Effective On'" field="'Entity.EffectiveOn'" type="'Date'" fixedwidth="'100'"></vr-datagridcolumn>
 </vr-datagrid>
