--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/CodeCompare/Templates/CodeCompareGrid.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/CodeCompare/Templates/CodeCompareGrid.html
@@ -4,10 +4,16 @@
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
              idfield="Code" enableautoexport="true">
-
     <vr-datagridcolumn headertext="'Code'" field="'Code'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Sale Zone Name'" field="'SaleZone'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Sale Zone Code '" field="'SaleCode'" type="'Text'" getcolor="getSaleCodeStatusColor"></vr-datagridcolumn>
-    <vr-datagridcolumn ng-repeat="item in gridColumnDefinitions" headertext="item.headerText" field="item.field" type="'Text'" getcolor="item.color" tag="item.tag"></vr-datagridcolumn>
-
+    <vr-datagridcolumn headertext="'Sale Code'" field="'SaleCode'" type="'Text'" getcolor="getSaleCodeStatusColor"></vr-datagridcolumn>
+    <vr-datagridcolumn ng-repeat="supplier in suppliers" headertext="supplier.Name" type="'Text'" tag="supplier" columnindex="3">
+        <vr-label isvalue color="{{viewScope.getSupplierCodeStatusColor(dataItem,colDef)}}">{{viewScope.getSupplierCode(colDef.tag.CarrierAccountId, dataItem)}}</vr-label>
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Sale Zone Name'" field="'SaleZone'" type="'Text'" columnindex="1002"></vr-datagridcolumn>
+    <vr-datagridcolumn ng-repeat="supplier in suppliers" headertext="supplier.Name" type="'Text'" tag="supplier" columnindex="1010">
+        <vr-label isvalue>{{viewScope.getSupplierZoneName(colDef.tag.CarrierAccountId, dataItem)}}</vr-label>
+    </vr-datagridcolumn>
+    <vr-datagridcolumn  headertext="'Occurrence Code In Suppliers'" field="'OccurrenceInSuppliers'" type="'Text'" columnindex="2003" getcolor="getOccurrenceInSupplierStatusColor"></vr-datagridcolumn>
+    <vr-datagridcolumn  headertext="'Absence Code In Suppliers'" field="'AbsenceInSuppliers'" type="'Text'" columnindex="2004" getcolor="getAbssenceInSupplierStatusColor"></vr-datagridcolumn>
+    <vr-datagridcolumn  headertext="'Action'" field="'Action'" type="'Text'" columnindex="2005"></vr-datagridcolumn>
 </vr-datagrid>
