--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Directives/BPValidationMessage/Templates/BPValidationMessageHistoryGridTemplate.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Directives/BPValidationMessage/Templates/BPValidationMessageHistoryGridTemplate.html
@@ -1,36 +1,45 @@
-﻿<div ng-hide="filterSectionCollapsed">
-    <vr-row removeline>
-        <vr-columns width="large">
-            <vr-select label="Severity"
-                       datasource="::actionSeverities"
-                       datatextfield="description"
-                       datavaluefield="value"
-                       selectedvalues="selectedActionSeverities"
-                       ismultipleselection
-                       hideselectedvaluessection>
-            </vr-select>
-        </vr-columns>
-    </vr-row>
-</div>
-<vr-row removeline>
-    <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
-        <div transclude-to="buttons">
-            <vr-button type="Search" data-onclick="search"></vr-button>
-        </div>
-    </vr-actionbar>
+﻿<vr-row removeline>
+    <vr-columns width="large">
+        <vr-select label="Severity"
+                   datasource="::scopeModel.actionSeverities"
+                   datatextfield="description"
+                   datavaluefield="value"
+                   selectedvalues="scopeModel.selectedActionSeverities"
+                   ismultipleselection
+                   hideselectedvaluessection>
+        </vr-select>
+    </vr-columns>
+    <vr-columns width="normal" withemptyline>
+        <vr-button type="Search" data-onclick="scopeModel.search" standalone></vr-button>
+    </vr-columns>
 </vr-row>
 <vr-row>
     <vr-columns width="fullrow">
-        <vr-datagrid datasource="bpValidationMessages" dataretrievalfunction="dataRetrievalFunction"
-                     on-ready="onGridReady"
+        <vr-datagrid on-ready="scopeModel.onGridReady"
+                     datasource="scopeModel.bpValidationMessages"
+                     dataretrievalfunction="scopeModel.dataRetrievalFunction"
                      pagingtype="'PagingOnScroll'"
-                     menuactions="gridMenuActions"
                      idfield="Entity.ValidationMessageId">
             <vr-datagridcolumn headertext="'ID'" field="'Entity.ValidationMessageId'"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Target Key'" field="'Entity.TargetKey'" type="'Text'"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Target Type'" field="'Entity.TargetType'" type="'Text'"></vr-datagridcolumn>
-            <vr-datagridcolumn headertext="'Severity'" field="'SeverityDescription'" widthfactor="5" getcolor="getSeverityColor"></vr-datagridcolumn>
-            <vr-datagridcolumn headertext="'Message'" field="'Entity.Message'" type="'Text'"></vr-datagridcolumn>
+            <vr-datagridcolumn headertext="'Severity'" field="'SeverityDescription'" widthfactor="5" getcolor="scopeModel.getSeverityColor"></vr-datagridcolumn>
+            <vr-datagridcolumn headertext="'Message'" field="'Entity.Message'" type="'Text'" expendablecolumn>
+            </vr-datagridcolumn>
         </vr-datagrid>
+    </vr-columns>
+</vr-row>
+<vr-row ng-if="scopeModel.showWarningConfirmationSection" removeline>
+    <vr-columns colnum="12">
+        <div style="float:right">
+            <vr-validator validate="scopeModel.validateWarningConfirmationValue()">
+                <vr-columns haschildcolumns style="float:right;position:relative;top:5px;left:15px;width:120px;">
+                    <vr-label>Confirm Warnings</vr-label>
+                </vr-columns>
+                <vr-columns haschildcolumns>
+                    <vr-switch value="scopeModel.warningConfirmationValue"></vr-switch>
+                </vr-columns>
+            </vr-validator>
+        </div>
     </vr-columns>
 </vr-row>
