Refactored the UI of the preview of the Import Supplier Pricelist process
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43753

--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Directives/SupplierPriceListPreviewSection/Templates/SupplierPriceListPreviewSectionTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Directives/SupplierPriceListPreviewSection/Templates/SupplierPriceListPreviewSectionTemplate.html
@@ -2,6 +2,7 @@
     <vr-tabs>
         <vr-tab header="'Summary'">
             <whs-spl-supplierpricelistpreview-summary on-ready="onSupplierPricelistPreviewSummaryReady"></whs-spl-supplierpricelistpreview-summary>
+            <businessprocess-bp-validation-message-history on-ready="onValidationMessageHistoryGridReady"></businessprocess-bp-validation-message-history>
         </vr-tab>
         <vr-tab header="'Preview Data'">
             <vr-row ng-hide="filterSectionCollapsed">
@@ -10,27 +11,20 @@
                                                      onselectitem="onViewChangeTypeSelectItem"
                                                      normal-col-num="3"
                                                      hideremoveicon="true">
+                    </whs-spl-viewchangetype-selector>
                 </span>
                 <span>
                     <whs-spl-groupedby-selector on-ready="onGroupedBySelectorReady"
                                                 normal-col-num="3"
                                                 hideremoveicon="true"
                                                 selectedvalues="selectedGroupedBy">
+                    </whs-spl-groupedby-selector>
                 </span>
             </vr-row>
-
             <vr-row>
                 <span vr-loader="isLoadingPreviewDataSection">
                     <vr-directivewrapper directive="selectedGroupedBy.dwGrid" on-ready="onDirectiveWrapperReady"></vr-directivewrapper>
                 </span>
-            </vr-row>
-        </vr-tab>
-
-        <vr-tab header="'Violated Rules'">
-            <vr-row>
-                <vr-columns width="fullrow">
-                    <businessprocess-bp-validation-message-history on-ready="onValidationMessageHistoryGridReady"></businessprocess-bp-validation-message-history>
-                </vr-columns>
             </vr-row>
         </vr-tab>
     </vr-tabs>
