--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Directives/Extensions/GenerationCustomSection/Templates/CustomerGenerationCustomSectionTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Directives/Extensions/GenerationCustomSection/Templates/CustomerGenerationCustomSectionTemplate.html
@@ -1,1 +1,15 @@
 ﻿<vr-common-timezone-selector on-ready="scopeModel.onTimeZoneSelectorReady" normal-col-num="{{ctrlCustomerGeneration.normalColNum}}" selectedvalues="scopeModel.selectedTimeZone"></vr-common-timezone-selector>
+<vr-columns colnum="{{ctrlCustomerGeneration.normalColNum}}">
+    <vr-textbox type="number" label="Commission" value="scopeModel.commission" minvalue="-100" maxvalue="100"></vr-textbox>
+</vr-columns>
+<vr-columns colnum="{{ctrlCustomerGeneration.normalColNum}}">
+    <vr-select datasource="scopeModel.commissionTypes"
+               datatextfield="description"
+               datavaluefield="value"
+               selectedvalues="scopeModel.selectedCommissionType"
+               entityname="Commission Type"
+               label="Commission Type"
+               hideremoveicon>
+    </vr-select>
+</vr-columns>
+
