--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Reports/CustomerInvoiceItemsReport.rdlc
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Reports/CustomerInvoiceItemsReport.rdlc
@@ -229,8 +229,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox2</rd:DefaultName>
-        <Top>3.03591in</Top>
-        <Left>2.01327in</Left>
+        <Top>3.04979in</Top>
+        <Left>1.54103in</Left>
         <Height>0.20833in</Height>
         <Width>0.90277in</Width>
         <ZIndex>6</ZIndex>
@@ -278,7 +278,7 @@
         </Paragraphs>
         <rd:DefaultName>Textbox2</rd:DefaultName>
         <Top>3.04979in</Top>
-        <Left>3.02216in</Left>
+        <Left>2.51324in</Left>
         <Height>0.20833in</Height>
         <Width>1.37554in</Width>
         <ZIndex>8</ZIndex>
@@ -311,8 +311,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox2</rd:DefaultName>
-        <Top>3.03591in</Top>
-        <Left>4.3977in</Left>
+        <Top>3.04979in</Top>
+        <Left>3.95823in</Left>
         <Height>0.20833in</Height>
         <Width>0.92658in</Width>
         <ZIndex>9</ZIndex>
@@ -333,7 +333,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=FormatNumber(Parameters!TotalAmount.Value,0)</Value>
+                <Value>=iif(Parameters!DisplayCommission.Value = True, FormatNumber(Parameters!TotalAmount.Value,0), FormatNumber(Parameters!TotalAmountAfterCommission.Value,0))</Value>
                 <Style>
                   <FontFamily>Verdana</FontFamily>
                 </Style>
@@ -345,10 +345,10 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox2</rd:DefaultName>
-        <Top>3.03591in</Top>
-        <Left>6.35375in</Left>
+        <Top>3.04979in</Top>
+        <Left>5.87923in</Left>
         <Height>0.20833in</Height>
-        <Width>0.92625in</Width>
+        <Width>0.89431in</Width>
         <ZIndex>10</ZIndex>
         <Style>
           <Border>
@@ -364,7 +364,7 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>1.78771in</Width>
+              <Width>1.5in</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>0.72593in</Width>
@@ -373,22 +373,25 @@
               <Width>0.10973in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.84932in</Width>
+              <Width>0.78682in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.00551in</Width>
+              <Width>0.90134in</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>0.61965in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.84285in</Width>
+              <Width>0.79077in</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>0.40396in</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>0.89431in</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>1in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -724,6 +727,53 @@
                     </Textbox>
                   </CellContents>
                 </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox1">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>=iif(Parameters!DisplayCommission.Value = true,"Net Amount","Amount")</Value>
+                              <Style>
+                                <FontFamily>Verdana</FontFamily>
+                                <FontWeight>Bold</FontWeight>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style>
+                            <TextAlign>Right</TextAlign>
+                          </Style>
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox1</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Color>LightGrey</Color>
+                          <Style>Solid</Style>
+                        </Border>
+                        <TopBorder>
+                          <Style>None</Style>
+                        </TopBorder>
+                        <BottomBorder>
+                          <Color>Black</Color>
+                        </BottomBorder>
+                        <LeftBorder>
+                          <Style>None</Style>
+                        </LeftBorder>
+                        <RightBorder>
+                          <Style>None</Style>
+                        </RightBorder>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
               </TablixCells>
             </TablixRow>
             <TablixRow>
@@ -1001,7 +1051,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=FormatNumber(Fields!OriginalSaleAmount.Value,2)</Value>
+                              <Value>=Fields!OriginalSaleAmount.Value</Value>
                               <Style>
                                 <FontSize>9pt</FontSize>
                               </Style>
@@ -1013,6 +1063,39 @@
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>SaleAmount</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Style>None</Style>
+                        </Border>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox2">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>=Fields!AmountAfterCommission.Value</Value>
+                              <Style>
+                                <FontSize>9pt</FontSize>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style>
+                            <TextAlign>Right</TextAlign>
+                          </Style>
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox2</rd:DefaultName>
                       <Style>
                         <Border>
                           <Style>None</Style>
@@ -1039,6 +1122,11 @@
             <TablixMember />
             <TablixMember />
             <TablixMember />
+            <TablixMember>
+              <Visibility>
+                <Hidden>= iif(Parameters!DisplayCommission.Value = True, false, true)</Hidden>
+              </Visibility>
+            </TablixMember>
             <TablixMember />
           </TablixMembers>
         </TablixColumnHierarchy>
@@ -1058,7 +1146,7 @@
         <Top>2.43695in</Top>
         <Left>0.04103in</Left>
         <Height>0.46875in</Height>
-        <Width>7.23897in</Width>
+        <Width>7.73251in</Width>
         <ZIndex>11</ZIndex>
         <Style>
           <Border>
@@ -1076,7 +1164,7 @@
         <Top>0.23146in</Top>
         <Left>0.07396in</Left>
         <Height>0.79514in</Height>
-        <Width>3.12123in</Width>
+        <Width>3.25573in</Width>
         <ZIndex>12</ZIndex>
         <Style>
           <Border>
@@ -1103,11 +1191,48 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox2</rd:DefaultName>
-        <Top>3.03591in</Top>
-        <Left>5.79006in</Left>
+        <Top>3.04979in</Top>
+        <Left>5.28776in</Left>
         <Height>0.20833in</Height>
         <Width>0.56369in</Width>
         <ZIndex>13</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="Textbox18">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>=FormatNumber(Parameters!TotalAmountAfterCommission.Value, 0)</Value>
+                <Style>
+                  <FontFamily>Verdana</FontFamily>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style>
+              <TextAlign>Right</TextAlign>
+            </Style>
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox2</rd:DefaultName>
+        <Top>3.04979in</Top>
+        <Left>6.77354in</Left>
+        <Height>0.20833in</Height>
+        <Width>1in</Width>
+        <ZIndex>14</ZIndex>
+        <Visibility>
+          <Hidden>=iif(Parameters!DisplayCommission.Value = True, false, True)</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
@@ -1122,7 +1247,7 @@
     <Height>9.98958in</Height>
     <Style />
   </Body>
-  <Width>7.28in</Width>
+  <Width>7.8425in</Width>
   <Page>
     <PageFooter>
       <Height>0.44687in</Height>
@@ -1247,7 +1372,7 @@
         </Field>
         <Field Name="SaleRateTypeId">
           <DataField>SaleRateTypeId</DataField>
-          <rd:TypeName>System.Int32</rd:TypeName>
+          <rd:TypeName>System.Nullable`1[[System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089]]</rd:TypeName>
         </Field>
         <Field Name="SaleRateTypeIdDescription">
           <DataField>SaleRateTypeIdDescription</DataField>
@@ -1284,6 +1409,14 @@
         <Field Name="ToDate">
           <DataField>ToDate</DataField>
           <rd:TypeName>System.DateTime</rd:TypeName>
+        </Field>
+        <Field Name="SaleRateAfterCommission">
+          <DataField>SaleRateAfterCommission</DataField>
+          <rd:TypeName>System.Nullable`1[[System.Decimal, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089]]</rd:TypeName>
+        </Field>
+        <Field Name="AmountAfterCommission">
+          <DataField>AmountAfterCommission</DataField>
+          <rd:TypeName>System.Nullable`1[[System.Decimal, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089]]</rd:TypeName>
         </Field>
       </Fields>
       <rd:DataSetInfo>
@@ -1344,6 +1477,17 @@
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
     <ReportParameter Name="Currency">
+      <DataType>String</DataType>
+      <Nullable>true</Nullable>
+      <AllowBlank>true</AllowBlank>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
+    <ReportParameter Name="DisplayCommission">
+      <DataType>Boolean</DataType>
+      <Nullable>true</Nullable>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
+    <ReportParameter Name="TotalAmountAfterCommission">
       <DataType>String</DataType>
       <Nullable>true</Nullable>
       <AllowBlank>true</AllowBlank>
